force-app/main/default/objects/Meeting__c/Meeting__c.object-meta.xml
<CustomObject>
    <label>Meeting</label>
    <nameField>
        <displayFormat>MN-{0000000}</displayFormat>
        <label>Meeting Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Meetings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>