force-app/main/default/objects/Meeting__c/fields/Bot_ID__c.field-meta.xml
<CustomField>
    <fullName>Bot_ID__c</fullName>
    <description>ID of the Bot created from Recall</description>
    <inlineHelpText>ID of the Bot created from Recall</inlineHelpText>
    <label>Bot ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>