force-app/main/default/objects/Meeting__c/fields/Bot_Name__c.field-meta.xml
<CustomField>
    <fullName>Bot_Name__c</fullName>
    <defaultValue>&apos;FieldKo Recorder&apos;</defaultValue>
    <description>Name of the bot created for the integration with Recall</description>
    <inlineHelpText>Name of the bot created for the integration with Recall</inlineHelpText>
    <label>Bot Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>