force-app/main/default/objects/Meeting__c/fields/Bot_Recording__c.field-meta.xml
<CustomField>
    <fullName>Bot_Recording__c</fullName>
    <description>Recording of the session</description>
    <inlineHelpText>Recording of the session</inlineHelpText>
    <label>Bot Recording</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>