force-app/main/default/objects/Meeting__c/fields/Bot_Status__c.field-meta.xml
<CustomField>
    <fullName>Bot_Status__c</fullName>
    <description>Status of the bot from Recall AI</description>
    <inlineHelpText>Status of the bot from Recall AI</inlineHelpText>
    <label>Bot Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ready</fullName>
            </value>
            <value>
                <fullName>joining_call</fullName>
            </value>
            <value>
                <fullName>call_ended</fullName>
            </value>
            <value>
                <fullName>done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>