force-app/main/default/objects/Meeting__c/fields/Duration_min__c.field-meta.xml
<CustomField>
    <fullName>Duration_min__c</fullName>
    <description>Length of the meeting in minutes</description>
    <formula>( Meeting_End_Time__c - Meeting_Date_Time__c )*24*60</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Length of the meeting in minutes</inlineHelpText>
    <label>Duration (min)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>