force-app/main/default/objects/Meeting__c/fields/Evaluting_Stage__c.field-meta.xml
<CustomField>
    <fullName>Evaluting_Stage__c</fullName>
    <label>Evaluting Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>assessment</fullName>
            </value>
            <value>
                <fullName>next_steps</fullName>
            </value>
            <value>
                <fullName>opportunity</fullName>
            </value>
            <value>
                <fullName>risks</fullName>
            </value>
            <value>
                <fullName>all_done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>