force-app/main/default/objects/Meeting__c/fields/Files_Ids__c.field-meta.xml
<CustomField>
    <fullName>Files_Ids__c</fullName>
    <description>Comma separated list of files uploaded for using on thread</description>
    <inlineHelpText>Comma separated list of files uploaded for using on thread</inlineHelpText>
    <label>Files Ids</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>