force-app/main/default/objects/Meeting__c/fields/GPT_Thread_ID__c.field-meta.xml
<CustomField>
    <fullName>GPT_Thread_ID__c</fullName>
    <label>GPT Thread ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>