force-app/main/default/objects/Meeting__c/fields/GPT_Thread_Run_Id__c.field-meta.xml
<CustomField>
    <fullName>GPT_Thread_Run_Id__c</fullName>
    <label>GPT Thread Run ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>