force-app/main/default/objects/Meeting__c/fields/GPT_Thread_Run_Job_Status__c.field-meta.xml
<CustomField>
    <fullName>GPT_Thread_Run_Job_Status__c</fullName>
    <label>GPT Thread Run Job Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>queued</fullName>
            </value>
            <value>
                <fullName>in_progress</fullName>
            </value>
            <value>
                <fullName>requires_action</fullName>
            </value>
            <value>
                <fullName>cancelling</fullName>
            </value>
            <value>
                <fullName>cancelled</fullName>
            </value>
            <value>
                <fullName>failed</fullName>
            </value>
            <value>
                <fullName>completed</fullName>
            </value>
            <value>
                <fullName>expired</fullName>
            </value>
            <value>
                <fullName>all_done</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>