force-app/main/default/objects/Meeting__c/fields/Meeting_End_Time__c.field-meta.xml
<CustomField>
    <fullName>Meeting_End_Time__c</fullName>
    <description>When the meeting ended</description>
    <inlineHelpText>When the meeting ended</inlineHelpText>
    <label>Meeting End Time</label>
    <type>DateTime</type>
</CustomField>