force-app/main/default/objects/Meeting__c/fields/Meeting_Participants__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Participants__c</fullName>
    <label>Meeting Participants</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>