force-app/main/default/objects/Meeting__c/fields/Meeting_Platform__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Platform__c</fullName>
    <label>Meeting Platform</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Zoom</fullName>
            </value>
            <value>
                <fullName>Webex</fullName>
            </value>
            <value>
                <fullName>google_meet</fullName>
            </value>
            <value>
                <fullName>microsoft_teams</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>