force-app/main/default/objects/Meeting__c/fields/Meeting_Summary__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Summary__c</fullName>
    <label>Meeting Summary</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>