force-app/main/default/objects/Meeting__c/fields/Meeting_URL__c.field-meta.xml
<CustomField>
    <fullName>Meeting_URL__c</fullName>
    <description>URL of the meeting from the video conferencing platform</description>
    <inlineHelpText>URL of the meeting from the video conferencing platform</inlineHelpText>
    <label>Meeting URL</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>