force-app/main/default/objects/Meeting__c/fields/Prompt_Template__c.field-meta.xml
<CustomField>
    <fullName>Prompt_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Prompt Template used to analyse the Transcript Text</inlineHelpText>
    <label>Prompt Template</label>
    <referenceTo>Kinetic_Form__c</referenceTo>
    <relationshipLabel>Meetings</relationshipLabel>
    <relationshipName>Meetings</relationshipName>
    <type>Lookup</type>
</CustomField>