force-app/main/default/objects/Meeting__c/fields/Recall_Meeting_ID__c.field-meta.xml
<CustomField>
    <fullName>Recall_Meeting_ID__c</fullName>
    <externalId>true</externalId>
    <label>Recall Meeting ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>