force-app/main/default/objects/Meeting__c/fields/Transcript_RTF__c.field-meta.xml
<CustomField>
    <fullName>Transcript_RTF__c</fullName>
    <inlineHelpText>Copy and paste the transcript to processed by the AI</inlineHelpText>
    <label>Transcript Text</label>
    <length>131000</length>
    <type>LongTextArea</type>
</CustomField>