force-app/main/default/objects/Meeting__c/listViews/Meeting_Copilot.listView-meta.xml
<ListView>
    <fullName>Meeting_Copilot</fullName>
    <columns>NAME</columns>
    <columns>Subject__c</columns>
    <columns>Bot_Status__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Meeting_Platform__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Duration_min__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Meeting_URL__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Meeting Copilot</label>
</ListView>